test: add unit test for TechnologyService